clusters/cerberus/apps/headlamp/ingress.yml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt-prod
#    external-dns.alpha.kubernetes.io/hostname: headlamp.kdmorris.dev
#    kubernetes.io/tls-acme: "true"
#  name: headlamp
#  namespace: headlamp
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: headlamp.kdmorris.dev
#      http:
#        paths:
#        - backend:
#            service:
#              name: headlamp
#              port:
#                number: 80
#          path: /
#          pathType: Prefix
#  tls:
#  - secretName: headlamp.kdmorris.dev
#    hosts:
#    - headlamp.kdmorris.dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-cloudflare
  namespace: headlamp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: cloudflare
  rules:
  - host: headlamp.kdmorris.dev
    http:
      paths:
      - backend:
          service:
            name: headlamp
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - secretName: headlamp.kdmorris.dev
    hosts:
    - headlamp.kdmorris.dev
